k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hauling-companion
  labels:
    app: hauling-companion
spec:
  type: ClusterIP
  selector:
    app: hauling-companion
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
